--- a/Frontend/src/style/index.css
+++ b/Frontend/src/style/index.css
@@ -195,14 +195,15 @@ body {
 
 .index-container .scoreboard {
     position: fixed;
-    top: 30px; 
-    left: 30px;
-    background-color: rgba(255, 255, 255, 0.9);
+    bottom: 30px; 
+    right: 30px;
+    background: linear-gradient(135deg, #f5f7fa, #e4e8ec);
     padding: 15px 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.307);
     z-index: 100;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    line-height: 30px;
 }
 
 .index-container .scoreboard:hover {
