--- a/Frontend/src/style/Profile.css
+++ b/Frontend/src/style/Profile.css
@@ -110,22 +110,19 @@
 }
 
 .profile-container input{
-  width: 100px;
-  border-top: 0px;
-  border-left: 0px;
-  border-right: 0px;
-  border-bottom: 1px solid #000000;
+  width: 150px;
+  border: 0px;
+  border-bottom: 2px solid black;
+  font-size: 20px;
   outline: none;
   background-color: #ffffff00;
-  padding-right: 30px;
 }
 .profile-container .check-icon {
-  position: absolute;
-  right: 670px; 
+  position: static;
   font-size: 20px;
   top: 45%;
   transform: translateY(390%);
-  color: green;
+  cursor: pointer;
 }
 /* 小螢幕適配 */
 @media (max-width: 768px) {
@@ -212,9 +209,14 @@
   border-radius: 10px;
   color: #ffffff;
   border: none;
-  font-size: 14px;
+  font-size: 1rem;
   padding: 10px 16px;
   background-color: #0077ff;
+}
+
+.modal .button:hover {
+  background-color: #0044ff;
+  cursor: pointer;
 }
 
 .modal-actions .button {
