--- a/Frontend/src/style/Login.css
+++ b/Frontend/src/style/Login.css
@@ -1,11 +1,10 @@
 .login-container {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
   background-color: white;
   font-family: 'Arial', sans-serif;
+  margin-top: 5%;
 }
 
 .login-container .form-container {
@@ -34,25 +33,6 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-.login-container .login-button {
-  width: calc(100% - 2rem);
-  padding: 0.8rem;
-  background-color: #333333;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.login-container .login-button:hover {
-  background-color: #666666;
 }
 
 .error-message {
