--- a/Frontend/src/style/Register.css
+++ b/Frontend/src/style/Register.css
@@ -1,15 +1,14 @@
 .register-container {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: white; /* 修改背景顏色為白色 */
+  background-color: white;
   font-family: 'Arial', sans-serif;
+  margin-top: 5%;
 }
 
 .register-container .form-container {
-  max-width: 500px; /* 調整寬度一致 */
+  max-width: 500px;
   width: 100%;
   padding: 2rem;
   background-color: white;
@@ -34,25 +33,6 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-.register-container .register-button {
-  width: calc(100% - 2rem);
-  padding: 0.8rem;
-  background-color: #333333;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.register-container .register-button:hover {
-  background-color: #666666;
 }
 
 .error-message {
