--- a/Frontend/src/style/Profile.css
+++ b/Frontend/src/style/Profile.css
@@ -1,18 +1,3 @@
-.profile-page {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  background-color: #ffffff;
-  padding: 20px;
-  min-height: 90vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  box-sizing: border-box;
-  color: #fff;
-}
-
 .profile-container {
   background: linear-gradient(90deg, #c5d5fa, #ffff92);
   border: none; 
@@ -21,6 +6,7 @@
   max-width: 450px;
   width: 90%;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  justify-items: center;
 }
 
 .profile-container .image-container {
@@ -78,6 +64,7 @@
   font-size: 18px;
   color: #555;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .profile-container .check-icon {
