--- a/Frontend/src/style/Button.css
+++ b/Frontend/src/style/Button.css
@@ -8,20 +8,20 @@
     font-weight: 500;
     margin: 5px;
     min-width: 100px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 基本陰影 */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .custom-button.primary {
-    background-color: #333333;
+    background-color: #3498dbe6;
     color: white;
     width: calc(100% - 2rem);
     padding: 0.8rem;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2); /* 較深的陰影 */
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .custom-button.primary:hover {
     background-color: #666666;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* 懸停時加深陰影 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .custom-button.secondary {
