--- a/Frontend/src/style/Profile.css
+++ b/Frontend/src/style/Profile.css
@@ -74,7 +74,16 @@
   transform: translateY(390%);
   cursor: pointer;
 }
-/* 小螢幕適配 */
+
+.profile-container input {
+  width: 150px;
+  border: 0px;
+  border-bottom: 2px solid black;
+  font-size: 20px;
+  outline: none;
+  background-color: #ffffff00;
+}
+
 @media (max-width: 768px) {
   .profile-container {
     padding: 20px;
